Oppdatert litt shiez

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
   <footer class="row">
     <div class="large-12 columns">
-      <hr> <p>© August Haug Productions 2015</p>
+      <hr> <p>© August Haug Hem Productions 2015</p>
     </div>
   </footer>
   </body>
