--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,73 @@
-<h2>Sign up</h2>
+<div class="large-10 large-centered columns">
+  <h2>Registrering</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <div class="field">
+        <%= f.label :subdomain, 'Butikknavn:', {:class => ("error_tekst" if resource.errors[:subdomain].present?)} %>
+        <% if resource.errors[:subdomain].present? %>
+            <%= resource.errors[:subdomain].join %>
+        <% end %>
+        <%= f.text_field :subdomain, :readonly => true %>
+      </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+      <div class="field">
+        <%= f.label :username, 'Brukernavn:', {:class => ("error_tekst" if resource.errors[:username].present?)} %>
+        <% if resource.errors[:username].present? %>
+            <%= resource.errors[:username].join %>
+        <% end %>
+        <%= f.text_field :username, {:class => ("error_field" if resource.errors[:username].present?)} %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+      <div class="field">
+        <%= f.label :first_name, 'Fornavn:', {:class => ("error_tekst" if resource.errors[:first_name].present?)} %>
+        <% if resource.errors[:first_name].present? %>
+            <%= resource.errors[:first_name].join %>
+        <% end %>
+        <%= f.text_field :first_name, {:class => ("error_field" if resource.errors[:first_name].present?)} %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+      <div class="field">
+        <%= f.label :last_name, 'Etternavn:', {:class => ("error_tekst" if resource.errors[:last_name].present?)} %>
+        <% if resource.errors[:last_name].present? %>
+            <%= resource.errors[:last_name].join %>
+        <% end %>
+        <%= f.text_field :last_name, {:class => ("error_field" if resource.errors[:last_name].present?)} %>
+      </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+      <div class="field">
+        <%= f.label :email, 'E-post:', {:class => ("error_tekst" if resource.errors[:email].present?)} %>
+        <% if resource.errors[:email].present? %>
+            <%= resource.errors[:email].join %>
+        <% end %>
+        <%= f.email_field :email, {:class => ("error_field" if resource.errors[:email].present?)} %>
+      </div>
 
-<%= render "devise/shared/links" %>
+      <!-- Set minimum password length string -->
+      <% if @validatable %>
+          <% characters = '(Minst '.concat @minimum_password_length.to_s.concat ' tegn):' %>
+      <% end %>
+      <div class="field">
+        <%= f.label :password, 'Passord '.concat(characters), {:class => ("error_tekst" if resource.errors[:email].present?)} %>
+        <% if resource.errors[:password].present? %>
+            <%= resource.errors[:password].join %>
+        <% end %>
+        <%= f.password_field :password, {:class => ("error_field" if resource.errors[:password].present?)} %>
+      </div>
+
+      <div class="field">
+        <%= f.label :password_confirmation, 'Skriv samme passord:', {:class => ("error_tekst" if resource.errors[:password_confirmation].present?)} %>
+        <% if resource.errors[:password_confirmation].present? %>
+            <%= resource.errors[:password_confirmation].join %>
+        <% end %>
+        <%= f.password_field :password_confirmation, {:class => ("error_field" if resource.errors[:password_confirmation].present?)} %>
+      </div>
+
+      <%= devise_error_messages! %>
+
+      <div class="actions">
+        <%= f.submit "Registrer deg" %>
+      </div>
+  <% end %>
+
+  <%= render "devise/shared/links" %>
+</div>
