--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<br />
+<br />
+<br />
+<br />
+<br />
+<%= form_tag(controller: "users", action: "registration", method: "get") do |f| %>
+  <div class="large-4 large-centered columns">
+    <div class="row collapse">
+      <div class="small-6 large-2 columns">
+        <span class="prefix">http://</span>
+      </div>
+      <div class="small-6 large-6 columns">
+        <input type="text" placeholder="butikknavn...">
+      </div>
+      <div class="small-12 large-2 columns">
+        <span class="postfix">.nettbutikk.no</span>
+      </div>
+      <div class="small-12 large-2 columns">
+        <%= f.submit 'Go' %>
+        <a href="#" class="button postfix">Go</a>
+      </div>
+    </div>
+  </div>
+<% end %>
