--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,9 +7,11 @@
       <li class="divider"></li>
       <% if user_signed_in? %>
           <li><%= link_to 'Min Side', users_show_path %></li>
+          <li class="divider"></li>
           <li><%= link_to 'Logg ut', destroy_user_session_path, :method => :delete %></li>
       <% else %>
           <li><%= link_to 'Registrering', new_user_registration_path %></li>
+          <li class="divider"></li>
           <li><%= link_to 'Logg inn', new_user_session_path %></li>
       <% end %>
       <li class="divider"></li>
