--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,21 +3,20 @@
 <br />
 <br />
 <br />
-<%= form_tag(controller: "users", action: "registration", method: "get") do |f| %>
+<%= form_for :users, url: {action: "available?"}, html: {method: 'get'} do |f| %>
   <div class="large-4 large-centered columns">
     <div class="row collapse">
       <div class="small-6 large-2 columns">
-        <span class="prefix">http://</span>
+        <%= content_tag :span, 'http://', class: 'prefix' %>
       </div>
       <div class="small-6 large-6 columns">
-        <input type="text" placeholder="butikknavn...">
+        <%= f.text_field :shop_name, placeholder: 'butikknavn...' %>
       </div>
       <div class="small-12 large-2 columns">
-        <span class="postfix">.nettbutikk.no</span>
+        <%= content_tag :span, '.nettbutikk.no', class: 'postfix' %>
       </div>
       <div class="small-12 large-2 columns">
-        <%= f.submit 'Go' %>
-        <a href="#" class="button postfix">Go</a>
+        <%= f.submit 'Go', class: 'button postfix' %>
       </div>
     </div>
   </div>
