--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,9 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
-<%= link_to 'Gå til din butikk', root_url(subdomain: current_user.subdomain) %>
+<div class="large-12 large-centered columns">
+  <div class="row">
+    <h1><%= current_user.last_name.capitalize.concat(', ').concat(current_user.first_name.capitalize)%></h1>
+    <p><%= 'E-post: '.concat(current_user.email) %></p>
+    <%= link_to 'Gå til din butikk', root_url(subdomain: current_user.subdomain) %>
+    <br />
+    <%= link_to 'Gå til ditt admin panel', admin_url(subdomain: current_user.subdomain) %>
+  </div>
+</div>
